--- a/bilanci_project/static/less/project.less
+++ b/bilanci_project/static/less/project.less
@@ -636,6 +636,13 @@ share box
   font-weight: 800;
 }
 
+div.classifiche div.col-md-3 h3.panel-title{
+  padding-top: 8px;
+}
+div.classifiche div.col-md-4{
+  padding-top: 8px;
+}
+
 //classifiche submit button fix
 #classifiche-form ul.list-group button.btn-blu{
   border-radius: 8px;
